--- a/nrt-connector-templates/nrt_raster_structure/Dockerfile
+++ b/nrt-connector-templates/nrt_raster_structure/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.6
 MAINTAINER Nathan Suberi <nathan.suberi@wri.org>
-ARG NAME=nrt-connector
+ARG NAME=cli_035
 ENV NAME ${NAME}
 
 # install core libraries
@@ -8,7 +8,13 @@ RUN apt-get update
 RUN pip install -U pip
 
 # install application libraries
-RUN apt-get install -y gdal-bin libgdal-dev cron
+RUN apt-get install -y \
+  gdal-bin \
+  libgdal-dev \
+  libnetcdf-dev \
+  netcdf-bin \
+  cron \
+  && apt-get clean
 
 # Move and copy over requirements here to speed up dev - don't need to reinstall
 # Python packages when only change is to application code
