--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 # raster files
 *.tif
 *.nc
+*.xml
 
 # C extensions
 *.so
@@ -13,7 +14,8 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
-*.env
+*.env *
+*credentials*
 build/
 develop-eggs/
 dist/
