--- a/static-data-connectors/soc_073_gridded_gdp/Dockerfile
+++ b/static-data-connectors/soc_073_gridded_gdp/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.6
 MAINTAINER Nathan Suberi <nathan.suberi@wri.org>
-ARG NAME=cli_035
+ARG NAME=soc_073_
 ENV NAME ${NAME}
 
 # install core libraries
@@ -13,23 +13,20 @@ RUN apt-get install -y \
   libgdal-dev \
   libnetcdf-dev \
   netcdf-bin \
-  cron \
   && apt-get clean
 
-# Move and copy over requirements here to speed up dev - don't need to reinstall
-# Python packages when only change is to application code
-COPY contents/requirements.txt .
-# install application libraries
-RUN pip install numpy #Install this ahead of rasterio for appropriate applications
-RUN pip install --upgrade pip && pip install -r requirements.txt
-RUN pip install -e git+https://github.com/fgassert/cartosql.py.git#egg=cartosql
+RUN pip install numpy #Install this ahead of rasterio
+RUN pip install --upgrade pip && pip install \
+    netCDF4 \
+    rasterio \
+    earthengine-api \
+    google-cloud-storage \
+    boto3
 
 # copy the application folder inside the container
 RUN mkdir -p /opt/$NAME/data
 WORKDIR /opt/$NAME/
 COPY contents/ .
-COPY time.cron .
-COPY credentials.json .
 VOLUME /opt/$NAME/data
 
 RUN groupadd -r $NAME && useradd -r -g $NAME $NAME
