--- a/Analytic Tools/climatewatch_ndc_nlp/docker-compose.yml
+++ b/Analytic Tools/climatewatch_ndc_nlp/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./data:/opt/climatewatch_ndc_nlp/data
     env_file:
       - .climatewatch.env
-    network_mode: host
+    network_mode: "host"
     depends_on:
       - neo4j
 
@@ -25,7 +25,6 @@ services:
     environment:
       NEO4J_AUTH: none
       NEO4J_dbms_allow__upgrade: "true"
-      NEO4J_dbms_memory_pagecache_size: "2G"
-      NEO4J_dbms_memory_heap_maxSize: "4G"
-      NEO4J_apoc_export_file_enabled: "true"
-    network_mode: host
+      # NEO4J_dbms_memory_pagecache_size: "2G"
+      # NEO4J_dbms_memory_heap_maxSize: "4G"
+      # NEO4J_apoc_export_file_enabled: "true"
