--- a/Analytic Tools/climatewatch_ndc_nlp/docker-compose.yml
+++ b/Analytic Tools/climatewatch_ndc_nlp/docker-compose.yml
@@ -1,11 +1,11 @@
 neo4j:
   image: neo4j:3.3
   ports:
-    - "7474:7474"
-    - "7687:7687"
+    - "7474"
+    - "7687"
   environment:
     NEO4J_AUTH: none
     NEO4J_dbms_allow__upgrade: "true"
-    NEO4J_dbms_memory_pagecache_size: "2G"
-    NEO4J_dbms_memory_heap_maxSize: "4G"
-    NEO4J_apoc_export_file_enabled: "true"
+    # NEO4J_dbms_memory_pagecache_size: "2G"
+    # NEO4J_dbms_memory_heap_maxSize: "4G"
+    # NEO4J_apoc_export_file_enabled: "true"
