major updates to graph building procedure, attempt to integrate neo4jrestclient package

--- a/Analytic Tools/climatewatch_ndc_nlp/Dockerfile
+++ b/Analytic Tools/climatewatch_ndc_nlp/Dockerfile
@@ -16,7 +16,8 @@ RUN pip install --upgrade pip && pip install \
     lxml \
     numpy \
     requests \
-    nltk
+    nltk \
+    neo4jrestclient
 
 # RUN pip install pyOpenSSL
 # RUN apt-get install -y \
